--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,37 @@
-body {
-  background-color: orange;
+a {
+  text-decoration: none;
+}
+
+#wrapper {
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 0 5%;
+}
+
+#logo {
+  text-align: center;
+  margin: 0;
+}
+
+a {
+  color: #6ab47b;
+}
+
+header {
+  color: #6ab47b;
+  background-color: #599a68;
+}
+
+
+h1, h2 {
+  color: #fff;
+}
+
+nav {
+  background: #599a68;
+}
+
+
+nav a, nav a:visited {
+  color: #fff;
 }
