--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
-a {
-  text-decoration: none;
+/**************************************************
+ * GENERAL
+**************************************************/
+body {
+  font-family: 'Open Sans', sans-serif;
 }
 
 #wrapper {
@@ -8,30 +11,100 @@ a {
   padding: 0 5%;
 }
 
+a {
+  text-decoration: none;
+}
+
+
+
+/**************************************************
+ * HEADING
+**************************************************/
+
 #logo {
   text-align: center;
   margin: 0;
 }
 
-a {
-  color: #6ab47b;
+h1 {
+  font-family: 'Changa One', sans-serif;
+  margin: 15px, 0;
+  font-size: 1.75em;
+  font-weight: normal;
+  line-height: 0.8em;
 }
 
+h2 {
+  font-size: 0.75em;
+  margin: -5px, 0 0;
+  font-weight: normal;
+}
+
+
+
+/**************************************************
+ * NAVIGATION
+**************************************************/
+
+nav {
+  text-align: center;
+  padding: 10px 0;
+  margin: 20px 0 0;
+}
+
+
+
+/**************************************************
+ * FOOTER
+**************************************************/
+
+footer {
+  font-size: 0.75em;
+  text-align: center;
+  padding-top: 50px;
+  color: #ccc;
+}
+
+
+
+/**************************************************
+ * COLOR
+**************************************************/
+
+/*site body*/
+body {
+  background-color: #fff;
+  color: #999
+}
+
+/*green header*/
 header {
   color: #6ab47b;
   background-color: #599a68;
 }
 
-
-h1, h2 {
-  color: #fff;
-}
-
+/*nav background on mobile*/
 nav {
   background: #599a68;
 }
 
+/*logo text*/
+h1, h2 {
+  color: #fff;
+}
 
+/*links*/
+a {
+  color: #6ab47b;
+}
+
+/*nav link*/
 nav a, nav a:visited {
   color: #fff;
 }
+
+/*selected nav link*/
+nav a.selected, nav a:hover {
+  color: #32673f;
+}
+
